[package]
name = "s"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.69"
crossterm = "0.26.1"
dirs-next = "2.0.0"
env_logger = "0.10.0"
fs_extra = "1.3.0"
indicatif = "0.17.3"
infer = "0.12.0"
lexopt = "0.3.0"
log = "0.4.17"
markdown-it = "0.4.0"
rayon = "1.6.1"
regex = "1.7.1"
s_macro={version="*",path="./crates/s_macro"}
syntect = "5.0.0"
sysinfo = "0.28.0"
termimad = "0.21.1"
threadpool = "1.8.1"
tui = "0.19.0"
walkdir = "2.3.2"
xshell = "0.2.3"
