[workspace]
resolver = "2"
members = ["crates/*"]

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["RSUU <rsuuyu@gmail.com>"]
description = ""
homepage = ""
repository = "https://github.com/rsuu/s"
readme = "README.md"
license = "MIT OR Apache-2.0"
keywords = []
categories = []
exclude = []
publish = false

[workspace.dependencies]
anyhow = "1.0.72"
crossterm = "0.26.1"
dirs-next = "2.0.0"
env_logger = "0.10.0"
fs_extra = "1.3.0"
infer = "0.13.0"
lexopt = "0.3.0"
log = "0.4.19"
#markdown-it = "0.5.0"
rayon = "1.7.0"
regex = "1.9.1"
syntect = "5.1.0"
sysinfo = "0.29.7"
termimad = "0.23.1"
threadpool = "1.8.1"
tui = "0.19.0"
walkdir = "2.3.3"
xshell = "0.2.5"
