[package]
name = "s"
version.workspace = true
edition.workspace = true
authors.workspace = true
description.workspace = true
homepage.workspace = true
repository.workspace = true
readme.workspace = true
license.workspace = true
keywords.workspace = true
categories.workspace = true
exclude.workspace = true

[dependencies]
anyhow.workspace = true
crossterm.workspace = true
dirs-next.workspace = true
env_logger.workspace = true
fs_extra.workspace = true
infer.workspace = true
lexopt.workspace = true
log.workspace = true
#markdown-it.workspace = true
rayon.workspace = true
regex.workspace = true
syntect.workspace = true
sysinfo.workspace = true
termimad.workspace = true
threadpool.workspace = true
tui.workspace = true
walkdir.workspace = true
xshell.workspace = true
